--- a/css/stylecardcontaner.css
+++ b/css/stylecardcontaner.css
@@ -6,15 +6,19 @@
 .container {
    display: grid !important;
    grid-template-columns: repeat(3, 1fr);
-   grid-template-rows: 1fr 2fr 1fr;
+   grid-template-rows: 1fr 1fr 1fr;
 }
 
 .card {
    margin: 1.5em;
 }
 
-.card>img {
+.card>a>img {
    width: 100%;
+}
+
+.card>info {
+   text-align: center;
 }
 
 @media (max-width: 800px) {
@@ -35,3 +39,5 @@
 .card {
    margin-inline: 0;
 }
+
+
