--- a/css/stylemaincontainer.css
+++ b/css/stylemaincontainer.css
@@ -1,7 +1,7 @@
 .main-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(1);
+    grid-template-rows: 1fr;
   }
 
 .left-bar {
